[package]
name = "light-control"
version = "0.1.0"
authors = ["Robin Hundt <24554122+robinhundt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {git = "https://github.com/eclipse/paho.mqtt.rust.git"}
tokio = {version = "0.2.22", features = ["macros", "fs", "uds", "stream"]}
nix = "0.18.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.57"
bincode = "1.3.1"
clap = "3.0.0-beta.1"
futures = "0.3.5"
anyhow = "1.0.32"